# ansible-role-chrony

./: README.md  pyproject.toml
.github/workflows/: ansible-test.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml
tasks/: main.yml
templates/: chrony.conf.j2
tests/: test.yml
vars/: main.yml
